Fix height when viewport height is small so hero image stretches on desktop

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -158,7 +158,6 @@ a:hover {
 @media (min-width: 768px) {
   .container {
     display: flex;
-    height: 100%;
     max-width: 1280px;
     margin: 0 auto;
     justify-content: center;
